--- a/AntivirusStart.cfg
+++ b/AntivirusStart.cfg
@@ -1,56 +1,20 @@
 [CONFIG]
-USER=healthchk
-#USER=sangeeth
-PASSWORD=healthchk
-#PASSWORD=123
+USER=sangeeth
+PASSWORD=123
 START_SCRIPT=start.sh
 STOP_SCRIPT=stop.sh
 EMAILHOST=localhost
-#EMAILHOST=127.0.0.1
-EMAIL_SENDING_ADDRESS=drmgmt@ncdex.com
-#EMAIL_SENDING_ADDRESS=root@mcafee.abc.com
+EMAIL_SENDING_ADDRESS=root@mcafee.abc.com
 HEADER=Server_Name Service_&_Status
 #HEADERS=<html><head><style>table, th, td {  border: 1px solid black; border-collapse: collapse;}th, td { padding: 5px; }th { text-align: left; }</style></head><table style="width:30%"><tr><th>Server Name</th><th>Days</th></tr>
 
 [USERS]
-#sangeeth=san@mcafee.abc.com
-#sangeeth=san@localhost.localdomain
-infra=sangeeth.sankalpa@lseg.com
-#infra=ncdex_infra_alerts@ncdex.com
-#abhays=itops@ncdex.com
-#ankitd=ankit.dham@ncdex.com
-#apekshap=apeksha.pandya@ncdex.com
-#bipinv=bipin.veliyam@ncdex.com
-#ganeshv=ganesh.viswanathan@ncdex.com
-#krunalb=krunal.bhingardive@ncdex.com
-#kunalb=kunal.bhandare@ncdex.com
-#manthanp=manthan.pandya@ncdex.com
-#niteshw=nitesh.waghela@ncdex.com
-#rahuls=rahul.sharma@ncdex.com
-#rameshk=rameshkumar.choudhary@ncdex.com
-#kartikeys=kartikey.singh@ncdex.com
-#harshitk=harshit.kabra@ncdex.com
+sangeeth=san@mcafee.abc.com
 
 [HOSTS]
-#DRGTW01
-172.19.104.127=
-#DRGTW02
-172.19.104.128=
-#DRCORE01
-172.19.104.130=
-#DRCORE02
-172.19.104.131=
-#DRCORE03
-172.19.104.132=
-#drsurvg2onl01
-172.19.104.73=
-#drsurvg2onl02
-172.19.104.74=
-#drsurvg2cls01
-172.19.104.71=
-#drtrdg2oracledb01
-172.19.104.57=
-#drtrdg2oracledb02
-172.19.104.58=
-#drsurvg2cls02
-172.19.104.72=
+#remoteserver1
+10.19.100.127=
+#remoteserver2
+10.19.100.128=
+#remoteserver3
+10.19.100.139=
